--- a/package.json
+++ b/package.json
@@ -11,8 +11,12 @@
   },
   "dependencies": {
     "firebase": "^11.2.0",
+    "install": "^0.13.0",
+    "npm": "^11.0.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-webcam": "^7.2.0",
+    "remixicon": "^4.6.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
