--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "npm": "^11.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-router-dom": "^7.1.3",
     "react-webcam": "^7.2.0",
     "remixicon": "^4.6.0"
   },
