--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "axios": "^1.7.9",
     "firebase": "^11.2.0",
+    "framer-motion": "^12.0.1",
     "install": "^0.13.0",
     "npm": "^11.0.0",
     "react": "^18.3.1",
