--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.1.3",
+    "react-toastify": "^11.0.3",
     "react-webcam": "^7.2.0",
     "remixicon": "^4.6.0"
   },
