--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.7.9",
     "firebase": "^11.2.0",
     "framer-motion": "^12.0.1",
+    "html2canvas": "^1.4.1",
     "install": "^0.13.0",
     "npm": "^11.0.0",
     "react": "^18.3.1",
